# DownOnSpot

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: arg.rs  downloader.rs  error.rs  main.rs  settings.rs  spotify.rs
src/tag/: ogg.rs
