[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package]
name = "down_on_spot"
version = "0.6.0+mgo"
edition = "2021"
authors = ["exttex", "oSumAtrIX"]
build = "build.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0"

[dependencies]
clap = { version = "4", features = ["cargo", "derive"] }
log = "0"
url = "2"
protobuf = "3"
base64 = "0"
id3 = "1"
dirs = "5"
chrono = "0"
lewton = "0"
futures = "0"
reqwest = "0"
colored = "2"
lame = "0"
aspotify = "0"
librespot = "0.6"
async-std = { version = "1", features = ["attributes", "tokio1"] }
serde_json = "1"
async-stream = "0"
oggvorbismeta = "0"
sanitize-filename = "0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["fs"] }
env_logger = "0"

[package.metadata.winres]
OriginalFilename = "DownOnSpot.exe"
FileDescription = "Download songs from Spotify with Rust"
ProductName = "DownOnSpot"
ProductVersion = "0.2.4"
